--- a/noaa_api_ext_example2.ipynb
+++ b/noaa_api_ext_example2.ipynb
@@ -18,6 +18,13 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "source": [
+    "https://gettecr.github.io/noaa-api.html#.YCZn6Y9KjVq"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
